# dbt-tutorial

./: dbt_project.yml
dbt_jaffle_shop/: .user.yml  dbt_project.yml  profiles.yml  pyproject.toml
dbt_jaffle_shop/macros/: unnest_key.sql
dbt_jaffle_shop/models/marts/: dim_customers.sql
dbt_jaffle_shop/models/staging/: stg_customers.sql
models/mart/: mart__customers.sql  mart__orders.sql  schema.yml
models/marts/: fct_orders.sql
models/metrics/: fct_orders.yml  metricflow_time_spine.sql
models/staging/: jaffle_shop.yml  schema.yml  src_jaffle_shop.yml  src_stripe.yml  staging_jaffle_shop__customers.sql  staging_jaffle_shop__orders.sql  staging_stripe__payment.sql  stg_orders.sql  stg_payments.sql
