[tool.poetry]
name = "dbt-tutorial"
version = "0.1.0"
description = "Sample project demonstrating integration dbt"
authors = ["Samir Liu <samir.liu@vpon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.8.6"
dbt-bigquery = "^1.8.2"
dbt-superset-lineage = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
